--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "autoprefixer": "^10.0.2",
     "clsx": "^1.1.1",
+    "firebase": "^8.1.1",
     "next": "^10.0.1",
     "postcss-import": "^13.0.0",
     "react": "^17.0.1",
